# translotator

./: .config  .config.old  .gitignore  404.html  CMakeLists.txt  Kconfig  LICENSE  LICENSE copy  Makefile  README copy.md  README.md  gh_deploy.sh  index.html  mkdocs.yml
axis_angle/: index.html
cmake/: cmake_uninstall.cmake.in  parse_git_tag.cmake  settings.cmake  static_analyzers.cmake  target_compile_options_common.cmake  version.hpp.in
complex_number/: index.html
docs/: README.md  axis_angle.md  complex_number.md  dual_number.md  dual_quaternion.md  euler_angle.md  matrix_based_objects.md  matrix_vector.md  quaternion.md  se_group.md  so_group.md  unit_complex_number.md  unit_quaternion.md
docs/uml/: object_hierarchy.plantuml
dual_number/: index.html
dual_quaternion/: index.html
euler_angle/: index.html
examples/: CMakeLists.txt  test_example.cpp
include/cmake-cpp-template/: test_header_only_lib.hpp  test_lib.hpp  version.hpp
include/translotator/: config.hpp  translotator.hpp  version.hpp
js/: mathjax_config.js
matrix_based_objects/: index.html
matrix_vector/: index.html
quaternion/: index.html
se_group/: index.html
search/: search_index.json
so_group/: index.html
src/: test_lib.cpp  test_src.cpp
test/: AxisAngle.cpp  CMakeLists.txt  ComplexNum.cpp  DualNumber.cpp  DualQuaternion.cpp  EulerAngle.cpp  Interpolators.cpp  Lerp.cpp  LieOperator.cpp  Matrix.cpp  Quaternion.cpp  SEGroup.cpp  SOGroup.cpp  SquareMatrix.cpp  UnitComplexNum.cpp  UnitDualQuaternion.cpp  UnitQuaternion.cpp  Vector.cpp  custom_tester.hpp  epsilon.cpp  test.cpp  test_example.cpp
translotator/AxisAngle_8hpp/: index.html
translotator/AxisAngle_8hpp_source/: index.html
translotator/ComplexNum_8hpp/: index.html
translotator/ComplexNum_8hpp_source/: index.html
translotator/DualNumber_8hpp/: index.html
translotator/DualNumber_8hpp_source/: index.html
translotator/DualQuaternion_8hpp/: index.html
translotator/DualQuaternion_8hpp_source/: index.html
translotator/EulerAngle_8hpp/: index.html
translotator/EulerAngle_8hpp_source/: index.html
translotator/Lerp_8hpp/: index.html
translotator/Lerp_8hpp_source/: index.html
translotator/LieOperator_8hpp/: index.html
translotator/LieOperator_8hpp_source/: index.html
translotator/MatrixBaseInternal_8hpp/: index.html
translotator/MatrixBaseInternal_8hpp_source/: index.html
translotator/MatrixBase_8hpp/: index.html
translotator/MatrixBase_8hpp_source/: index.html
translotator/Matrix_8hpp/: index.html
translotator/Matrix_8hpp_source/: index.html
translotator/Quaternion_8hpp/: index.html
translotator/Quaternion_8hpp_source/: index.html
translotator/S1_8hpp/: index.html
translotator/S1_8hpp_source/: index.html
translotator/S3_8hpp/: index.html
translotator/S3_8hpp_source/: index.html
translotator/SEGroup_8hpp/: index.html
translotator/SEGroup_8hpp_source/: index.html
translotator/SE_8hpp/: index.html
translotator/SE_8hpp_source/: index.html
translotator/SOGroup_8hpp/: index.html
translotator/SOGroup_8hpp_source/: index.html
translotator/SO_8hpp/: index.html
translotator/SO_8hpp_source/: index.html
translotator/ScLerp_8hpp/: index.html
translotator/ScLerp_8hpp_source/: index.html
translotator/Slerp_8hpp/: index.html
translotator/Slerp_8hpp_source/: index.html
translotator/Slerp__Lerp_8hpp/: index.html
translotator/Slerp__Lerp_8hpp_source/: index.html
translotator/SquareMatrix_8hpp/: index.html
translotator/SquareMatrix_8hpp_source/: index.html
translotator/UnitComplexNum_8hpp/: index.html
translotator/UnitComplexNum_8hpp_source/: index.html
translotator/UnitDualQuaternion_8hpp/: index.html
translotator/UnitDualQuaternion_8hpp_source/: index.html
translotator/UnitQuaternion_8hpp/: index.html
translotator/UnitQuaternion_8hpp_source/: index.html
translotator/Vector_8hpp/: index.html
translotator/Vector_8hpp_source/: index.html
translotator/annotated/: index.html
translotator/class_member_enums/: index.html
translotator/class_member_functions/: index.html
translotator/class_member_typedefs/: index.html
translotator/class_member_variables/: index.html
translotator/class_members/: index.html
translotator/classes/: index.html
translotator/classtranslotator_1_1AxisAngle/: index.html
translotator/classtranslotator_1_1ComplexNum/: index.html
translotator/classtranslotator_1_1DualNumber/: index.html
translotator/classtranslotator_1_1DualQuaternion/: index.html
translotator/classtranslotator_1_1EulerAngle/: index.html
translotator/classtranslotator_1_1Matrix/: index.html
translotator/classtranslotator_1_1MatrixBase/: index.html
translotator/classtranslotator_1_1Quaternion/: index.html
translotator/classtranslotator_1_1SEGroup/: index.html
translotator/classtranslotator_1_1SOGroup/: index.html
translotator/classtranslotator_1_1SquareMatrix/: index.html
translotator/classtranslotator_1_1UnitComplexNum/: index.html
translotator/classtranslotator_1_1UnitDualQuaternion/: index.html
translotator/classtranslotator_1_1UnitQuaternion/: index.html
translotator/classtranslotator_1_1Vector/: index.html
translotator/classtranslotator_1_1interpolators_1_1Lerper/: index.html
translotator/classtranslotator_1_1interpolators_1_1ScLerper/: index.html
translotator/classtranslotator_1_1interpolators_1_1SlerpLerper/: index.html
translotator/classtranslotator_1_1interpolators_1_1Slerper/: index.html
translotator/classtranslotator_1_1interpolators_1_1SlerperFast/: index.html
translotator/config_8hpp/: index.html
translotator/config_8hpp_source/: index.html
translotator/default__type_8hpp/: index.html
translotator/default__type_8hpp_source/: index.html
translotator/dir_19a7ecde96094a236c7c8e28b6698d62/: index.html
translotator/dir_8ed321f5373998308f124cc3f5af3597/: index.html
translotator/dir_b0f52d96602c2240130b99aee8b7fd2d/: index.html
translotator/dir_d44c64559bbebec7f509842c48db8b23/: index.html
translotator/epsilon_8hpp/: index.html
unit_complex_number/: index.html
unit_quaternion/: index.html
(+345 files in other folders)
